--- a/package.json
+++ b/package.json
@@ -1,42 +1,44 @@
 {
-  "name": "20-RepoProvas",
-  "version": "1.0.0",
-  "main": "index.js",
-  "repository": "git@github.com:vianaz/20-RepoProvas.git",
-  "author": "Gabriel Viana Boaes <viana_gab2001@hotmail.com>",
-  "license": "MIT",
-  "scripts": {
-    "buid": "tsc",
-    "start": "node build/server.js",
-    "dev": "tsnd --transpile-only --respawn --ignore-watch node_modules --exit-child --cls --rs -r dotenv/config -r tsconfig-paths/register src/server.ts",
-    "test": "jest"
-  },
-  "prisma": {
-    "seed": "ts-node prisma/seed.ts"
-  },
-  "dependencies": {
-    "@prisma/client": "4.1.0",
-    "bcrypt": "^5.0.1",
-    "cors": "^2.8.5",
-    "express": "^4.18.1",
-    "jsonwebtoken": "^8.5.1",
-    "prisma": "^4.1.0",
-    "ts-node": "^10.9.1"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
-    "@types/jest": "^28.1.6",
-    "@typescript-eslint/eslint-plugin": "^5.30.7",
-    "@typescript-eslint/parser": "^5.30.7",
-    "dotenv": "^16.0.1",
-    "eslint": "^8.20.0",
-    "faker": "^6.6.6",
-    "jest": "^28.1.3",
-    "supertest": "^6.2.4",
-    "ts-jest": "^28.0.7",
-    "ts-node-dev": "^2.0.0",
-    "tsconfig-paths": "^4.0.0",
-    "typescript": "^4.7.4"
-  }
+	"name": "express-api-template",
+	"version": "1.0.1",
+	"main": "index.js",
+	"repository": "git@github.com:vianaz/app-express.git",
+	"author": "Lucas Alves Rodiruges <contato.lucasalv@gmai.com",
+	"license": "MIT",
+	"scripts": {
+		"buid": "babel src --extensions '.js,.ts' --out-dir dist --no-copy-ignored",
+		"start": "node build/server.js",
+		"dev": "tsnd --transpile-only --respawn --ignore-watch node_modules --exit-child --cls --rs -r dotenv/config -r tsconfig-paths/register src/server.ts",
+		"test": "jest"
+	},
+	"prisma": {
+		"seed": "ts-node prisma/seed.ts"
+	},
+	"dependencies": {
+		"@prisma/client": "4.1.0",
+		"bcrypt": "^5.0.1",
+		"cors": "^2.8.5",
+		"express": "^4.18.1",
+		"joi": "^17.6.0",
+		"jsonwebtoken": "^8.5.1",
+		"prisma": "^4.1.0",
+		"ts-node": "^10.9.1"
+	},
+	"devDependencies": {
+		"@types/cors": "^2.8.12",
+		"@types/express": "^4.17.13",
+		"@types/jest": "^28.1.6",
+		"@typescript-eslint/eslint-plugin": "^5.30.7",
+		"@typescript-eslint/parser": "^5.30.7",
+		"dotenv": "^16.0.1",
+		"dotenv-cli": "^6.0.0",
+		"eslint": "^8.20.0",
+		"faker": "^6.6.6",
+		"jest": "^28.1.3",
+		"supertest": "^6.2.4",
+		"ts-jest": "^28.0.7",
+		"ts-node-dev": "^2.0.0",
+		"tsconfig-paths": "^4.0.0",
+		"typescript": "^4.7.4"
+	}
 }
