--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"author": "Lucas Alves Rodiruges <contato.lucasalv@gmai.com",
 	"license": "MIT",
 	"scripts": {
-		"buid": "babel src --extensions '.js,.ts' --out-dir dist --no-copy-ignored",
+		"build": "babel src --extensions '.js,.ts' --out-dir build --no-copy-ignored",
 		"start": "node build/server.js",
 		"dev": "tsnd --transpile-only --respawn --ignore-watch node_modules --exit-child --cls --rs -r dotenv/config -r tsconfig-paths/register src/server.ts",
 		"test": "jest"
@@ -25,11 +25,17 @@
 		"ts-node": "^10.9.1"
 	},
 	"devDependencies": {
+		"@babel/cli": "^7.18.9",
+		"@babel/core": "^7.18.9",
+		"@babel/node": "^7.18.9",
+		"@babel/preset-env": "^7.18.9",
+		"@babel/preset-typescript": "^7.18.6",
 		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
 		"@types/jest": "^28.1.6",
 		"@typescript-eslint/eslint-plugin": "^5.30.7",
 		"@typescript-eslint/parser": "^5.30.7",
+		"babel-plugin-module-resolver": "^4.1.0",
 		"dotenv": "^16.0.1",
 		"dotenv-cli": "^6.0.0",
 		"eslint": "^8.20.0",
