--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Gabriel Viana Boaes <viana_gab2001@hotmail.com>",
   "license": "MIT",
   "scripts": {
-    "buid": "tsc",
+    "build": "babel src --extensions '.js,.ts' --out-dir build --no-copy-ignored",
     "start": "node build/server.js",
     "dev": "tsnd --transpile-only --respawn --ignore-watch node_modules --exit-child --cls --rs -r dotenv/config -r tsconfig-paths/register src/server.ts",
     "test": "jest"
@@ -15,6 +15,11 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
+    "@babel/cli": "^7.18.9",
+    "@babel/core": "^7.18.9",
+    "@babel/preset-env": "^7.18.9",
+    "@babel/preset-typescript": "^7.18.6",
+    "babel-plugin-module-resolver": "^4.1.0",
     "@prisma/client": "4.1.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
