docs: 🐱‍👤 update babel docs and .env's

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,22 +3,20 @@
     "esModuleInterop": true,
     "module": "CommonJS",
     "moduleResolution": "node",
-    "outDir": "./build",
-    "rootDir": "./src",
+    "outDir": "build",
     "target": "ES2016",
-    "baseUrl": "./src/",
     "paths": {
-      "@controllers/*": ["controllers/*"],
-      "@db/*": ["db/*"],
-      "@errors/*": ["errors/*"],
-      "@factories/*": ["factories/*"],
-      "@middlewares/*": ["middlewares/*"],
-      "@schemas/*": ["models/schemas*"],
-      "@types/*": ["models/types/*"],
-      "@repositories/*": ["repositories/*"],
-      "@routers/*": ["routers/*"],
-      "@services/*": ["services/*"],
-      "@utils/*": ["utils/*"]
+      "@db/*": ["./src/db/*"],
+      "@routers/*": ["./src/routers/*"],
+      "@middlewares/*": ["./src/middlewares/*"],
+      "@controllers/*": ["./src/controllers/*"],
+      "@factories/*": ["./src/factories/*"],
+      "@services/*": ["./src/services/*"],
+      "@utils/*": ["./src/utils/*"],
+      "@schemas/*": ["./src/models/*"],
+      "@types/*": ["./src/models/*"],
+      "@repositories/*": ["./src/repositories/*"],
+      "@tests/factories/*": ["./__test__/factories/*"]
     }
   },
   "ts-node": {
