--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "express-api-template",
-	"version": "1.0.1",
-	"main": "index.js",
+	"version": "1.0.2",
+	"main": "server.js",
 	"repository": "git@github.com:vianaz/app-express.git",
-	"author": "Lucas Alves Rodiruges <contato.lucasalv@gmai.com",
+	"author": "Lucas Alves <contato.lucasalv@gmai.com:",
 	"license": "MIT",
 	"scripts": {
 		"build": "babel src --extensions '.js,.ts' --out-dir build --no-copy-ignored",
@@ -11,17 +11,12 @@
 		"dev": "tsnd --transpile-only --respawn --ignore-watch node_modules --exit-child --cls --rs -r dotenv/config -r tsconfig-paths/register src/server.ts",
 		"test": "jest"
 	},
-	"prisma": {
-		"seed": "ts-node prisma/seed.ts"
-	},
 	"dependencies": {
-		"@prisma/client": "4.1.0",
-		"bcrypt": "^5.0.1",
+		"@prisma/client": "^4.6.1",
 		"cors": "^2.8.5",
 		"express": "^4.18.1",
+		"express-async-errors": "^3.1.1",
 		"joi": "^17.6.0",
-		"jsonwebtoken": "^8.5.1",
-		"prisma": "^4.1.0",
 		"ts-node": "^10.9.1"
 	},
 	"devDependencies": {
@@ -37,11 +32,8 @@
 		"@typescript-eslint/parser": "^5.30.7",
 		"babel-plugin-module-resolver": "^4.1.0",
 		"dotenv": "^16.0.1",
-		"dotenv-cli": "^6.0.0",
-		"eslint": "^8.20.0",
-		"faker": "^6.6.6",
 		"jest": "^28.1.3",
-		"supertest": "^6.2.4",
+		"prisma": "^4.6.1",
 		"ts-jest": "^28.0.7",
 		"ts-node-dev": "^2.0.0",
 		"tsconfig-paths": "^4.0.0",
