--- a/package.json
+++ b/package.json
@@ -1,42 +1,29 @@
 {
 	"name": "express-api-template",
-	"version": "1.0.2",
+	"version": "1.0.3",
 	"main": "server.js",
 	"repository": "git@github.com:vianaz/app-express.git",
-	"author": "Lucas Alves <contato.lucasalv@gmai.com:",
+	"author": "Lucas Alves <contato.lucasalv@gmail.com>",
 	"license": "MIT",
 	"scripts": {
-		"build": "babel src --extensions '.js,.ts' --out-dir build --no-copy-ignored",
+		"dev": "tsx watch src/server.ts",
+		"build": "tsup src --outDir build",
+		"prestart": "",
 		"start": "node build/server.js",
-		"dev": "tsnd --transpile-only --respawn --ignore-watch node_modules --exit-child --cls --rs -r dotenv/config -r tsconfig-paths/register src/server.ts",
-		"test": "jest"
+		"test": "vitest"
 	},
 	"dependencies": {
-		"@prisma/client": "^4.6.1",
 		"cors": "^2.8.5",
-		"express": "^4.18.1",
-		"express-async-errors": "^3.1.1",
-		"joi": "^17.6.0",
-		"ts-node": "^10.9.1"
+		"dotenv": "^16.0.3",
+		"express": "^4.18.2",
+		"joi": "^17.7.0"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.18.9",
-		"@babel/core": "^7.18.9",
-		"@babel/node": "^7.18.9",
-		"@babel/preset-env": "^7.18.9",
-		"@babel/preset-typescript": "^7.18.6",
 		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
-		"@types/jest": "^28.1.6",
-		"@typescript-eslint/eslint-plugin": "^5.30.7",
-		"@typescript-eslint/parser": "^5.30.7",
-		"babel-plugin-module-resolver": "^4.1.0",
-		"dotenv": "^16.0.1",
-		"jest": "^28.1.3",
-		"prisma": "^4.6.1",
-		"ts-jest": "^28.0.7",
-		"ts-node-dev": "^2.0.0",
-		"tsconfig-paths": "^4.0.0",
-		"typescript": "^4.7.4"
+		"tsup": "^6.5.0",
+		"tsx": "^3.12.2",
+		"typescript": "^4.7.4",
+		"vitest": "^0.27.2"
 	}
 }
