--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,24 +5,22 @@
 		"moduleResolution": "node",
 		"outDir": "./build",
 		"rootDir": ".",
-		"target": "ES2017",
+		"target": "ES2020",
 		"baseUrl": "./src/",
 		"paths": {
 			"@/*": ["*"],
-			"@db/*": ["db/*"],
 			"@utils/*": ["utils/*"],
 			"@types/*": ["types/*"],
+			"@config/*": ["config/*"],
 			"@errors/*": ["errors/*"],
 			"@routes/*": ["routes/*"],
 			"@schemas/*": ["schemas/*"],
 			"@services/*": ["services/*"],
+			"@factories/*": ["factories/*"],
 			"@controllers/*": ["controllers/*"],
 			"@middlewares/*": ["middlewares/*"],
 			"@repositories/*": ["repositories/*"]
 		}
-	},
-	"ts-node": {
-		"esm": true
 	},
 	"include": ["src/**/*", "tests/**/*"]
 }
