--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"build": "tsup src --outDir build",
 		"prestart": "",
 		"start": "node build/server.js",
-		"test": "vitest"
+		"test": "vitest",
+		"test:staged": "vitest related --run"
 	},
 	"dependencies": {
 		"cors": "^2.8.5",
@@ -21,6 +22,14 @@
 	"devDependencies": {
 		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
+		"@typescript-eslint/eslint-plugin": "^5.52.0",
+		"@typescript-eslint/parser": "^5.52.0",
+		"eslint": "^8.34.0",
+		"eslint-config-prettier": "^8.6.0",
+		"git-commit-msg-linter": "^4.7.3",
+		"husky": "^8.0.3",
+		"lint-staged": "^13.1.2",
+		"prettier": "^2.8.4",
 		"tsup": "^6.5.0",
 		"tsx": "^3.12.2",
 		"typescript": "^4.7.4",
