--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
 	"name": "express-api-template",
-	"version": "1.0.3",
+	"version": "1.0.4",
 	"main": "server.js",
 	"repository": "git@github.com:vianaz/app-express.git",
 	"author": "Lucas Alves <contato.lucasalv@gmail.com>",
 	"license": "MIT",
+	"type": "module",
 	"scripts": {
 		"dev": "tsx watch src/server.ts",
-		"build": "tsup src --outDir build",
+		"build": "tsup src --outDir build --format esm",
 		"prestart": "",
 		"start": "node build/server.js",
 		"test": "vitest",
@@ -16,8 +17,7 @@
 	"dependencies": {
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
-		"express": "^4.18.2",
-		"joi": "^17.7.0"
+		"express": "^4.18.2"
 	},
 	"devDependencies": {
 		"@types/cors": "^2.8.12",
