--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,14 @@
 {
 	"compilerOptions": {
 		"esModuleInterop": true,
-		"module": "CommonJS",
+		"module": "ES2022",
 		"moduleResolution": "node",
 		"outDir": "./build",
 		"rootDir": ".",
-		"target": "ES2020",
+		"target": "ES2022",
 		"baseUrl": "./src/",
 		"paths": {
-			"@/*": ["*"],
-			"@utils/*": ["utils/*"],
-			"@types/*": ["types/*"],
-			"@config/*": ["config/*"],
-			"@errors/*": ["errors/*"],
-			"@routes/*": ["routes/*"],
-			"@schemas/*": ["schemas/*"],
-			"@services/*": ["services/*"],
-			"@factories/*": ["factories/*"],
-			"@controllers/*": ["controllers/*"],
-			"@middlewares/*": ["middlewares/*"],
-			"@repositories/*": ["repositories/*"]
+			"@/*": ["*"]
 		}
 	},
 	"include": ["src/**/*", "tests/**/*"]
